# Template

./: Coding Conventions.md  Coding Patterns.md  README.md
docker/: docker-publish.yaml
latex/: README.md
nest/: package-lock.json  package.json
nest/src/: app.module.ts
nest/src/auth/: auth.service.ts
nest/src/users/: user.entity.ts
next/: .env.development  .env.production  package-lock.json  package.json
next/app/components/common/: HeaderAppBar.js
next/pages/: index.js
next/public/: index.html
node/: .gitignore  README.md  Setup.md  node-test.yaml  npm-publish.yaml
node/backend/nest/: Dockerfile
node/frontend/: Setup.md  pages-deploy.yaml
node/frontend/electron/: Setup.md
node/frontend/next/: .dockerignore  Setup.md
node/frontend/vite/: Setup.md
node/nest/: Setup.md
node/next/: .dockerignore
node/vite/: Setup.md
python/: .gitignore  Dockerfile  README.md  Setup.md  pypi-publish.yaml  pyproject.toml  python-test.yaml
spring/: .gitignore  Dockerfile  build.gradle.kts
spring/src/main/kotlin/com/windsnow1025/example/spring/: Application.kt  GlobalCorsConfig.kt
spring/src/main/kotlin/com/windsnow1025/example/spring/controller/: RootController.kt  UserController.kt
spring/src/main/kotlin/com/windsnow1025/example/spring/entity/: User.kt
spring/src/main/resources/: application-docker.properties  application.properties  schema.sql
spring/src/main/resources/request/: root.http  user.http
spring/src/test/kotlin/com/windsnow1025/example/spring/: ApplicationTests.kt
(+3 files in other folders)
